<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_contact_details"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="#ccc"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <EditText
        android:id="@+id/relation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="relation"
        android:hint="@string/relation"
        android:padding="12dp"
        android:inputType="text"
        android:textColorHint="#ccc"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:hint="@string/phone_number"
        android:padding="12dp"
        android:inputType="phone"
        android:textColorHint="#ccc"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/relation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:backgroundTint="@color/accent"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
